# bool-extras

./: LICENSE  bool-extras.cabal
examples/: Arrow.hs  Bool.hs  Monoid.hs  Morphisms.hs
src/Data/Bool/: Extras.hs
