name:                bool-extras
version:             0.1.0
synopsis:            A fold function for Bool
description:         The `bool' function allows folding over boolean values.
                     .
                     This is comparable to the `maybe' or `either' functions
                     on their respective types.
                     .
                     The `bool' function is a replacement for the build-in
                     @if then else@-syntax. However since it is a function it
                     can be partially applied and passed around to higher order
                     functions, like so:
                     .
                     > ghci> :m + Data.Bool.Extras
                     > ghci> let yesOrNo = bool "yes" "no"
                     > ghci> map yesOrNo [True, False, True]
                     > ["yes", "no", "yes"]
license:             BSD3
license-file:        LICENSE
author:              Erik Hesselink,
                     Jeroen Leeuwestein,
                     Tom Lokhorst,
                     Sebastiaan Visser
maintainer:          Tom Lokhorst <tom@lokhorst.eu>
stability:           Stable
category:            Data
build-type:          Simple
hs-source-dirs:      src
exposed-modules:     Data.Bool.Extras
build-depends:       base >= 3 && <= 4

